# mpi-rs

./: AGENTS.md  AI.md  Cargo.toml  LICENSE  README.md  TODO.md
.github/workflows/: clippy-debug.yml  fmt-debug.yml  rust.yml  test-debug.yml
crates/ctx-future/: Cargo.toml  README.md  se-design-baseline.md
crates/ctx-future/examples/: basic_resume.rs  error_result.rs  scheduler_many.rs
crates/ctx-future/src/: future.rs  lib.rs  poll.rs  sleep.rs  std_future.rs
crates/mpi/: Cargo.toml  README.md  se-design-baseline.md  se-send-scope.md  se-task-topology.md
crates/mpi-core/: Cargo.toml  README.md  se-design-baseline.md  se-send-scope.md  se-task-topology.md
crates/mpi-macros/: Cargo.toml  README.md  se-design-baseline.md
crates/mpi-os-events/: Cargo.toml  README.md  se-design-baseline.md
crates/mpi-os-events/examples/: unix_signal_bridge.rs
crates/mpi-os-events/src/: lib.rs  signal.rs
crates/mpi-transaction/: Cargo.toml  README.md  se-design-baseline.md
crates/mpi-transaction/examples/: record_and_recover.rs
crates/mpi-transaction/src/: lib.rs
crates/mpi/examples/: ping_pong.rs  priority_shutdown.rs  streaming_query.rs  synchronous_call.rs  unix_signal_bridge.rs
crates/mpi/reports/: final-implementation-readiness.md  full-implementation-attempt.md  stream-task-generation-report.md  suspended-handler-request-progress-audit.md
crates/mpi/src/: call.rs  error.rs  lib.rs  message.rs  queue.rs  runtime.rs  scope.rs  session.rs  signal.rs  stream.rs  task.rs  transaction.rs
crates/mpi/tests/: errors.rs  runtime_baseline.rs  scope_compile_fail.rs  task_lifecycle.rs  task_macro.rs  timed_handlers.rs
crates/persistent-log-storage/: Cargo.toml  se-design-baseline.md
crates/persistent-log-storage-service/: Cargo.toml  README.md  se-design-baseline.md
crates/persistent-log-storage/src/: lib.rs
crates/timeout-server/: Cargo.toml  se-design-baseline.md
crates/timeout-service/: Cargo.toml  README.md  se-design-baseline.md
docs/: message-model.md  se-architecture.md  se-change-process.md  se-glossary.md  se-index.md  se-interfaces.md  se-protocols.md  se-requirements.md  se-send-scope.md  se-stakeholders.md  se-task-topology.md  se-traceability.md  se-validation-scenarios.md  se-verification-plan.md  se-verification-report.md
docs/agents/: implementation-agent.md  process.md  release-agent.md  review-agent.md  system-engineering-agent.md  test-agent.md  traceability-agent.md  validation-agent.md
docs/reports/: diagnostics-roadmap.md  final-implementation-readiness.md  full-implementation-attempt.md  generated-task-api-inspection.md  macro-task-generation-report.md  runtime-baseline-agent-report.md  stream-task-generation-report.md  suspended-handler-request-progress-audit.md  unix-signal-bridge.md
docs/se/: architecture.md  change-process.md  glossary.md  interfaces.md  protocols.md  replacement-readiness.md  requirements.md  send-scope.md  stakeholders.md  task-topology.md  traceability.md  validation-scenarios.md  verification-plan.md  verification-report.md
examples/: counter.rs
src/: lib.rs
tests/: counter.rs
(+23 files in other folders)
