[workspace]
members = [
    "crates/ctx-future",
    "crates/mpi",
    "crates/mpi-macros",
    "crates/mpi-os-events",
    "crates/persistent-log-storage",
    "crates/timeout-server",
]
resolver = "2"

[workspace.package]
edition = "2024"
license = "MIT"
repository = "https://github.com/matslil/mpi-rs"
