[workspace]
members = [
    "crates/ctx-future",
    "crates/mpi",
    "crates/mpi-core",
    "crates/mpi-macros",
    "crates/mpi-os-events",
    "crates/mpi-transaction",
    "crates/persistent-log-storage-service",
    "crates/timeout-service",
]
resolver = "2"

[workspace.package]
edition = "2024"
license = "MIT"
repository = "https://github.com/matslil/mpi-rs"
