[package]
name = "mpi-os-events"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = ["unix-signals"]
unix-signals = ["dep:signal-hook"]

[dependencies]
mpi = { path = "../mpi" }

[target.'cfg(unix)'.dependencies]
# Unix signal forwarding needs async-signal-safe registration and a safe bridge
# from POSIX handlers into ordinary Rust code.
signal-hook = { version = "0.4.4", default-features = false, features = ["iterator"], optional = true }

[[example]]
name = "unix_signal_bridge"
path = "examples/unix_signal_bridge.rs"
required-features = ["unix-signals"]
