[package]
name = "mpi-transaction"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Transactional messaging support for mpi-rs"

[dependencies]
mpi = { package = "mpi-core", path = "../mpi-core", features = ["enable-mpi-transaction"] }
persistent-log-storage-service = { path = "../persistent-log-storage-service" }
