[package]
name = "persistent-log-storage"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Crash-safe file-backed persistent log storage for mpi-rs recovery"

[dependencies]
serde = { version = "1", optional = true }
serde-wincode = { version = "0.1.2", optional = true }

[features]
default = ["serde"]
serde = ["dep:serde", "dep:serde-wincode"]

[dev-dependencies]
serde = { version = "1", features = ["derive"] }
